Fix stupid flickering
Thanks @dmarcoux 🙇🏻

--- a/app/assets/stylesheets/campaign.css.scss
+++ b/app/assets/stylesheets/campaign.css.scss
@@ -63,6 +63,12 @@
     }
   }
 
+  a li {
+    border: 2px solid #f7f7f7;
+    margin: 8px 0;
+    padding: 10px 8px;
+  }
+
   a:hover li {
     border: 2px solid black;
     margin: 8px 0;
